--- a/C#/HelloWorldFrameWorkWithVisualStudio/HelloWorldFrameWorkWithVisualStudio/HelloWorldFrameWorkWithVisualStudio.csproj
+++ b/C#/HelloWorldFrameWorkWithVisualStudio/HelloWorldFrameWorkWithVisualStudio/HelloWorldFrameWorkWithVisualStudio.csproj
@@ -43,11 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="03_ConsoleWrite\ConsoleWrite.cs" />
+    <Compile Include="04_NewLine\NewLine.cs" />
+    <Compile Include="05_Comment\Comment.cs" />
+    <Compile Include="07_Whitespace\Whitespace.cs" />
+    <Compile Include="08_Quotes\Quotes.cs" />
+    <Compile Include="09_PlaceHolder\PlaceHolder.cs" />
+    <Compile Include="EmptyStatement.cs" />
+    <Compile Include="HelloWorld.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="02_WriteLineDemo\WriteLineDemo1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
