--- a/C#/Operator/Operator/Operator.csproj
+++ b/C#/Operator/Operator/Operator.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="할당연산자.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
