--- a/C#/Operator/Operator/Operator.csproj
+++ b/C#/Operator/Operator/Operator.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="관계형 연산자.cs" />
+    <Compile Include="논리연산자.cs" />
     <Compile Include="할당연산자.cs" />
   </ItemGroup>
   <ItemGroup>
