--- a/C#/Operator/Operator/Operator.csproj
+++ b/C#/Operator/Operator/Operator.csproj
@@ -47,6 +47,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="관계형 연산자.cs" />
     <Compile Include="논리연산자.cs" />
+    <Compile Include="비트연산자.cs" />
+    <Compile Include="삼항연산자.cs" />
+    <Compile Include="시프트연산자.cs" />
     <Compile Include="할당연산자.cs" />
   </ItemGroup>
   <ItemGroup>
