C# 교과서 마스터하기 16 16. while 문과 do 문, foreach 문으로 반복 처리하기

--- a/C#/Operator/Operator/Operator.csproj
+++ b/C#/Operator/Operator/Operator.csproj
@@ -53,6 +53,7 @@
     <Compile Include="연산자\할당연산자.cs" />
     <Compile Include="제어문\ForDescription.cs" />
     <Compile Include="제어문\switch문.cs" />
+    <Compile Include="제어문\while문.cs" />
     <Compile Include="제어문\제어_조건문.cs" />
   </ItemGroup>
   <ItemGroup>
