--- a/C#/Operator/Operator/Operator.csproj
+++ b/C#/Operator/Operator/Operator.csproj
@@ -43,7 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="연산자\Program.cs" />
+    <Compile Include="반복문제어\BreakDemo.cs" />
+    <Compile Include="반복문제어\ContinueDemo.cs" />
+    <Compile Include="반복문제어\GoToDemo.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="연산자\관계형 연산자.cs" />
     <Compile Include="연산자\논리연산자.cs" />
