--- a/C#/Operator/Operator/Operator.csproj
+++ b/C#/Operator/Operator/Operator.csproj
@@ -48,6 +48,7 @@
     <Compile Include="반복문제어\GoToDemo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="배열\Array.cs" />
     <Compile Include="연산자\관계형 연산자.cs" />
     <Compile Include="연산자\논리연산자.cs" />
     <Compile Include="연산자\비트연산자.cs" />
