--- a/C#/Operator/Operator/Operator.csproj
+++ b/C#/Operator/Operator/Operator.csproj
@@ -59,6 +59,7 @@
     <Compile Include="제어문\switch문.cs" />
     <Compile Include="제어문\while문.cs" />
     <Compile Include="제어문\제어_조건문.cs" />
+    <Compile Include="함수\FunctionNote.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
