C# 교과서 마스터하기 20,22 20. C# 인터렉티브로 출력문부터 함수까지 내용 복습하기 22. 구조체 사용하기

--- a/C#/Operator/Operator/Operator.csproj
+++ b/C#/Operator/Operator/Operator.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="구조체\StructureType.cs" />
     <Compile Include="반복문제어\BreakDemo.cs" />
     <Compile Include="반복문제어\ContinueDemo.cs" />
     <Compile Include="반복문제어\GoToDemo.cs" />
@@ -64,5 +65,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
