C# 교과서 마스터하기 23 23. 열거형 형식 사용하기

--- a/C#/Operator/Operator/Operator.csproj
+++ b/C#/Operator/Operator/Operator.csproj
@@ -56,6 +56,7 @@
     <Compile Include="연산자\삼항연산자.cs" />
     <Compile Include="연산자\시프트연산자.cs" />
     <Compile Include="연산자\할당연산자.cs" />
+    <Compile Include="열거형\EnumerationTextbook.cs" />
     <Compile Include="제어문\ForDescription.cs" />
     <Compile Include="제어문\switch문.cs" />
     <Compile Include="제어문\while문.cs" />
