--- a/C#/Operator/Operator/Operator.csproj
+++ b/C#/Operator/Operator/Operator.csproj
@@ -43,13 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LINQ\linqDemo.cs" />
+    <Compile Include="객체\ObjectDemo.cs" />
     <Compile Include="구조체\StructureType.cs" />
+    <Compile Include="널값 다루기\NullDemo.cs" />
+    <Compile Include="문자열\StringFunction.cs" />
     <Compile Include="반복문제어\BreakDemo.cs" />
     <Compile Include="반복문제어\ContinueDemo.cs" />
     <Compile Include="반복문제어\GoToDemo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="배열\Array.cs" />
+    <Compile Include="알고리즘\알고리즘.cs" />
     <Compile Include="연산자\관계형 연산자.cs" />
     <Compile Include="연산자\논리연산자.cs" />
     <Compile Include="연산자\비트연산자.cs" />
@@ -57,10 +62,15 @@
     <Compile Include="연산자\시프트연산자.cs" />
     <Compile Include="연산자\할당연산자.cs" />
     <Compile Include="열거형\EnumerationTextbook.cs" />
+    <Compile Include="예외\예외처리.cs" />
+    <Compile Include="제네릭\Dictionary.cs" />
+    <Compile Include="제네릭\GenericDemo.cs" />
     <Compile Include="제어문\ForDescription.cs" />
     <Compile Include="제어문\switch문.cs" />
     <Compile Include="제어문\while문.cs" />
     <Compile Include="제어문\제어_조건문.cs" />
+    <Compile Include="컬렉션\Collection.cs" />
+    <Compile Include="컬렉션\List.cs" />
     <Compile Include="클래스\ClassDemo.cs" />
     <Compile Include="함수\FunctionNote.cs" />
   </ItemGroup>
