--- a/C#/Operator/Operator/Operator.csproj
+++ b/C#/Operator/Operator/Operator.csproj
@@ -47,6 +47,11 @@
     <Compile Include="객체\ObjectDemo.cs" />
     <Compile Include="구조체\StructureType.cs" />
     <Compile Include="널값 다루기\NullDemo.cs" />
+    <Compile Include="네임스페이스\NameSpace.cs" />
+    <Compile Include="대리자\Delegate.cs" />
+    <Compile Include="동적형식\동적형식.cs" />
+    <Compile Include="메서드와매개변수\Car.cs" />
+    <Compile Include="메서드와매개변수\MethodAndParameter.cs" />
     <Compile Include="문자열\StringFunction.cs" />
     <Compile Include="반복문제어\BreakDemo.cs" />
     <Compile Include="반복문제어\ContinueDemo.cs" />
@@ -54,6 +59,14 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="배열\Array.cs" />
+    <Compile Include="부분클래스,메서드체이닝\Bye.cs" />
+    <Compile Include="부분클래스,메서드체이닝\Hello.cs" />
+    <Compile Include="부분클래스,메서드체이닝\PartialClass.cs" />
+    <Compile Include="상속\InheritanceNote.cs" />
+    <Compile Include="생성자\Create.cs" />
+    <Compile Include="소멸자\Destructor.cs" />
+    <Compile Include="속성사용\NoName.cs" />
+    <Compile Include="속성사용\Property.cs" />
     <Compile Include="알고리즘\알고리즘.cs" />
     <Compile Include="연산자\관계형 연산자.cs" />
     <Compile Include="연산자\논리연산자.cs" />
@@ -63,6 +76,11 @@
     <Compile Include="연산자\할당연산자.cs" />
     <Compile Include="열거형\EnumerationTextbook.cs" />
     <Compile Include="예외\예외처리.cs" />
+    <Compile Include="오버라이드\OverrideDemo.cs" />
+    <Compile Include="이벤트와 이벤트처리기\Event.cs" />
+    <Compile Include="인덱서와 반복기\IndexerAndIterator.cs" />
+    <Compile Include="인터페이스\Interface.cs" />
+    <Compile Include="제네릭 클래스\GenericDemo.cs" />
     <Compile Include="제네릭\Dictionary.cs" />
     <Compile Include="제네릭\GenericDemo.cs" />
     <Compile Include="제어문\ForDescription.cs" />
@@ -72,11 +90,16 @@
     <Compile Include="컬렉션\Collection.cs" />
     <Compile Include="컬렉션\List.cs" />
     <Compile Include="클래스\ClassDemo.cs" />
+    <Compile Include="특성과리플렉션\AttributeDemo.cs" />
+    <Compile Include="필드\FieldDemo.cs" />
     <Compile Include="함수\FunctionNote.cs" />
+    <Compile Include="확장메서드\ExtensionMethod.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="객체지향\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
