--- a/C#/HelloWorld1/FirstApp/FirstApp.csproj
+++ b/C#/HelloWorld1/FirstApp/FirstApp.csproj
@@ -63,6 +63,26 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ch5.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ch6.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ch7.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ch8.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ch9.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -76,6 +96,21 @@
     </Compile>
     <Compile Include="ch4.xaml.cs">
       <DependentUpon>ch4.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ch5.xaml.cs">
+      <DependentUpon>ch5.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ch6.xaml.cs">
+      <DependentUpon>ch6.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ch7.xaml.cs">
+      <DependentUpon>ch7.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ch8.xaml.cs">
+      <DependentUpon>ch8.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ch9.xaml.cs">
+      <DependentUpon>ch9.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
